# simplebgc-rs

./: .gitignore  Cargo.toml  README.md
simplebgc/: Cargo.toml
simplebgc-derive/: Cargo.toml
simplebgc-derive/src/: field.rs  lib.rs  primitive.rs
simplebgc/src/: lib.rs  message.rs  payload.rs
simplebgc/src/commands/: board_info.rs  cmd_response.rs  constants.rs  control.rs  data_stream.rs  get_angles.rs  macros.rs  mod.rs  motors_off.rs  raw_message.rs  read_params.rs  read_params_3.rs  realtime.rs
simplebgc/src/data/: mod.rs  rpy.rs
src/: lib.rs  main.rs  message.rs  payload.rs
src/command/: control.rs  macros.rs  mod.rs  read_params_3.rs
src/commands/: control.rs  macros.rs  mod.rs  motors_off.rs  read_params_3.rs
