[package]
name = "simplebgc"
version = "0.1.0"
authors = ["Ibiyemi Abiodun <ibiyemi@intulon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enumflags2 = "0.6.3"
bytes = "0.5.4"
num-traits = "0.2"
num-derive = "0.3"
crc16 = "0.4.0"
mashup = "0.1.9"
thiserror = "1.0.16"
simplebgc-derive = { path = "../simplebgc-derive" }